--- a/Notebook/NetworkEvolution.tex
+++ b/Notebook/NetworkEvolution.tex
@@ -2,9 +2,7 @@
 
 \section{IoT}
 
-The Cisco IoT System has six technology pillars: Network Connectivity, Fog computing, Security, Data analysis, Management and Automation, Application Enablement Platform.\\
-
-The Cisco IoT network connectivity pillar identifies devices that can be used to provide IoT connectivity to many diverse industries and applications.\\
+The Cisco IoT System has six technology pillars: Network Connectivity, Fog computing, Security, Data analysis, Management and Automation, Application Enablement Platform.
 
 \textbf{Fog computing} is an IoT network model. It enables end devices to run applications \emph{locally} and make immediate decisions. This reduces the data burden on networks, as raw data does not need to be sent over network connections. It enhances resiliency by allowing IoT devices to operate when network connections are lost. It also enhances security by keeping sensitive data from being transported beyond the edge where it is needed.\\
 
@@ -16,11 +14,9 @@ The Cisco IoT security pillar offers scalable cybersecurity solutions:
 \item \textbf{IoT Physical security} enables surveillance in a wide variety of environments with Cisco Video Surveillance IP Cameras
 \end{itemize}
 
-The \textbf{Cisco IoT analytics} infrastructure consists of distributed network infrastructure components and IoT-specific, application programming interfaces (APIs).
-
 \section{Cloud computing}
 
-Cloud computing is a network model where servers and services are dispersed globally in distributed data centers. Cloud computing, with its “pay-as-you-go” model, allows organizations to treat computing and storage expenses more as a utility rather than investing in infrastructure. Capital expenditures are transformed into operating expenditures.\\
+Cloud computing is a network model where servers and services are dispersed globally in distributed data centers. Cloud computing, with its ``pay-as-you-go'' model, allows organizations to treat computing and storage expenses more as a utility rather than investing in infrastructure. Capital expenditures are transformed into operating expenditures.
 
 \subsection{Cloud service}
 
